--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,13 @@
     <color name="colorNegro">#0a0909</color>
     <color name="colorBlanco">#e2dcde</color>
     <color name="colorDorado">#ecb502</color>
+    <color name="colorDorado1">#8b670e</color>
     <color name="colorRojo">#d40323</color>
     <color name="colorVerde">#126e02</color>
+    <color name="colorVerde1">#317159</color>
+    <color name="colorCeleste">#38b7ca</color>
     <color name="colorAzul">#040486</color>
     <color name="colorPlateado">#505056</color>
     <color name="colorcafe">#502c03</color>
+    <color name="colorRosado">#ac1678</color>
 </resources>
