--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="main.iv.ancho">70dp</dimen>
     <dimen name="main.height.cero">0dp</dimen>
     <dimen name="main.tv.textsize.mensaje">20sp</dimen>
+    <dimen name="main.tv.textsize.mensaje1">30sp</dimen>
     <dimen name="main.tv.margintop">10dp</dimen>
     <dimen name="main.tv.padding">10dp</dimen>
     <dimen name="main.btn.textsize">16sp</dimen>
